--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
       "@nestjs/common": "^8.0.0",
       "@nestjs/config": "^1.1.6",
       "@nestjs/core": "^8.0.0",
+      "@nestjs/jwt": "^8.0.0",
       "@nestjs/platform-express": "^8.0.0",
       "@nestjs/sequelize": "^8.0.0",
       "@nestjs/swagger": "^5.2.0",
+      "bcryptjs": "^2.4.3",
       "cross-env": "^7.0.3",
       "pg": "^8.7.3",
       "pg-hstore": "^2.3.4",
@@ -41,6 +43,7 @@
       "@nestjs/cli": "^8.0.0",
       "@nestjs/schematics": "^8.0.0",
       "@nestjs/testing": "^8.0.0",
+      "@types/bcryptjs": "^2.4.2",
       "@types/express": "^4.17.13",
       "@types/jest": "27.0.2",
       "@types/node": "^16.0.0",
